Add races to participants
[#138383687]
