# app/controllers/api/v1/participants_controller.rb
@@ -66,6 +66,7 @@ module Api
           :screening_id,
           :ssn,
           languages: [],
+          races: %i[race race_detail],
           roles: []
         )
       end
